--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 html{
-  font font-family: 'Roboto', monospace, sans-sherif;
+  font-family: 'Roboto', monospace, sans-sherif;
+}
+
+header{
+  font-family: 'Roboto', monospace, sans-sherif;
+  font-size: 1.5em;
+  text-align: center;
+  color: #C7AC92;
+
 }
