--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ html{
   font-family: 'Roboto', monospace, sans-sherif;
 }
 
-header{
+#indexheader{
   font-family: 'Roboto', monospace, sans-sherif;
   font-size: 1.5em;
   text-align: center;
