--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,19 @@ html{
   font-family: 'Roboto', monospace, sans-sherif;
 }
 
+body{
+  background-color: #9CB380;
+}
 #indexheader{
   font-family: 'Roboto', monospace, sans-sherif;
   font-size: 3em;
   text-align: center;
   color: #C7AC92;
+}
 
+#p1{
+  font-family: 'Roboto', monospace, sans-sherif;
+  font-size:1.5em;
+  text-align: center;
+  color: #C7AC92;
 }
