--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,18 @@ html{
 }
 
 body{
-  background-color: #C7AC92;
+  background-color: #D7CEC7
 }
 #indexheader{
   font-family: 'Roboto', monospace, sans-sherif;
   font-size: 3em;
   text-align: center;
-  color: #9CB380;
+  color: #76323F
 }
 
 #p1{
   font-family: 'Roboto', monospace, sans-sherif;
   font-size:1.5em;
   text-align: center;
-  color: #9CB380;
+  color: black;
 }
