--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body{
   background-color: #D7CEC7
 }
 #indexheader{
+  padding-top: 100px;
   font-family: 'Roboto', monospace, sans-sherif;
   font-size: 3em;
   text-align: center;
