--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,35 @@ body{
   padding-right: 10px;
 }
 }
+
+ownerpic" src="Images/ownerPic.png" alt="maker">
+<img id="pouch" src="Images/pouch.png" alt="pouch">
+<img id="workstation" src="Images/workStation.png" alt="workstation">
+<img id="stairs"
+
+.images{
+  display:grid;
+  grid-gap:10px;
+  grid-template-columns: 75px 75px 75px;
+  background-color: #D7CEC7;
+}
+
+.ownerpic{
+  grid-column: 1/3;
+  grid-row:1;
+}
+
+.pouch{
+  grid-column: 3;
+  grid-row:1/3;
+}
+
+.workstation{
+  grid-column:1;
+  grid-row:2;
+}
+
+.stairs{
+  grid-column:2;
+  grid-row:2;
+}
