--- a/css/style.css
+++ b/css/style.css
@@ -49,33 +49,18 @@ body{
 }
 }
 
-
-
-.images{
-  display:grid;
-  grid-gap:10px;
-  grid-template-columns: 100px 50px 100px;
-  background-color: #D7CEC7;
-  padding-left: 75px;
-  padding-right:75px;
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
-.ownerpic{
-  grid-column: 1/3;
-  grid-row:1;
+.column{
+  flex:50%;
+  padding: 0 4px;
 }
 
-.pouch{
-  grid-column: 3;
-  grid-row:1/3;
-}
-
-.workstation{
-  grid-column:1;
-  grid-row:2;
-}
-
-.stairs{
-  grid-column:2;
-  grid-row:2;
+.column img{
+  margin-top: 8px;
+  vertical-align: middle;
 }
