--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,30 @@ body{
   width: 200px;
 
 }
+
+#images{
+  display:grid;
+  grid-gap:10px;
+  grid-template-columns: 100px 100px 100px;
+
+}
+
+#imageA{
+  grid-column: 1 / 3;
+       grid-row: 1;
+}
+
+#imageB{
+  grid-column: 3 ;
+        grid-row: 1 / 3;
+}
+
+#imageC{
+  grid-column: 1 ;
+        grid-row: 2 ;
+}
+
+#imageD{
+  grid-column: 2;
+        grid-row: 2;
+}
