--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ html{
 body{
   background-color: #D7CEC7
 }
+
 #indexheader{
   padding-top: 80px;
   font-family: 'Roboto', monospace, sans-sherif;
@@ -21,7 +22,12 @@ body{
   color: black;
   padding-left: 35px;
   padding-right: 35px;
+}
 
+a {
+  text-align: center;
+  padding-left: 35px;
+  padding-right: 35px;
 }
 
 @media only screen and (min-width: 750px) {
