--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ a {
   text-align: center;
   padding-left: 35px;
   padding-right: 35px;
+  font-size: 30px;
 }
 
 @media only screen and (min-width: 750px) {
