--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ body{
 }
 
 #ul1 {
-  background=color: #822300;
-  color: white;
+  background-color: #822300;
+  color: #FFFFFF;
 }
 
 @media only screen and (min-width: 750px) {
