--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,11 @@ body{
   padding-left: 35px;
   padding-right: 35px;
   font-size: 30px;
+  text-decoration: none;
+}
+
+#al:visited{
+  color: #FFFFFF;
 }
 
 #ul1 {
