--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -12,3 +12,11 @@ html{
 #Jewelrynavigation{
   list-style-type: none;
 }
+
+
+
+.img{
+  width: 100%;
+  height: 100%;
+  object-fit: scale-scale-down;s
+}
