--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -14,9 +14,11 @@ html{
 }
 
 
+#images{
+  display: flex;
 
-.img{
-  width: 100%;
-  height: 100%;
-  object-fit: scale-scale-down;s
+}
+
+.earringsflat1{
+  flex:1.3344;
 }
