--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -21,4 +21,10 @@ html{
 
 .earringsflat1{
   flex:1.3344;
+  padding-bottom: 10px;
+}
+
+.earringsround1{
+  flex:1.3344;
+  padding-bottom: 10px;
 }
