background color test

--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -6,10 +6,10 @@ h1{
 }
 
 html{
-  background-color: white;
+  background-color: #fac1be
 }
 body{
-  background-color: orange;
+  background-color: #fea49f
 }
 
 #Jewelrynavigation{
