--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -6,10 +6,10 @@ h1{
 }
 
 html{
-  background-color: #fac1be
+  background-color: #bccbde;
 }
 body{
-  background-color: #fea49f
+  background-color: #c2dde6;
 }
 
 #Jewelrynavigation{
