--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -6,10 +6,10 @@ h1{
 }
 
 html{
-  background-color: #bccbde;
+  background-color: #845007;
 }
 body{
-  background-color: #c2dde6;
+  background-color: ##c9af98;
 }
 
 #Jewelrynavigation{
