background color changed to white

--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -6,10 +6,10 @@ h1{
 }
 
 html{
-  background-color: #f7bfa8;
+  background-color: white;
 }
 body{
-  background-color: #e09475;
+  background-color: white;
 }
 
 #Jewelrynavigation{
