--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -2,7 +2,8 @@ h1{
   font-family: 'Roboto', monospace, sans-sherif;
   font-size: 2em;
   text-align: center;
-  color: #76323F
+  color: #ffea00;
+
 }
 
 html{
