--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -5,6 +5,10 @@ h1{
   color: #ffea00;
 
 }
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
 
 html{
   background-color: white;
@@ -29,7 +33,6 @@ body{
 }
 
 }
-
 #images{
   display: flex;
 
