--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -34,7 +34,7 @@ body{
 
 }
 
-@media only screen and (max-width: 2000px) {
+@media only screen and (min-width: 700px) {
   body {
     background-color: lightblue;
   }
