--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -60,7 +60,15 @@ body{
 }
 
 .Jewelrynavigation a {
+padding: 6px 10px 6px 18px;
+text-decoration: none;
+font-size: 25px;
+color:white;
+display: block;
+}
 
+.Jewelrynavigation a:hover{
+  color:white;
 }
 
 }
