--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -32,9 +32,8 @@ body{
   font-size: 1em;
 }
 .earringsflat1{
-  padding-bottom: 10px;
-  position: relative;
-  left: 30px;
+  max-width: 100%
+  height:auto;
 }
 
 .earringsround1{
