--- a/css/knotStyle.css
+++ b/css/knotStyle.css
@@ -27,7 +27,7 @@ body{
   float:left;
   color:#00A9D8;
   text-align: center;
-  padding-left: 100px 16px;
+  padding-left: 18px;
   text-decoration: none;
   font-size: 1em;
 }
