--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -6,6 +6,10 @@ h1{
 
 }
 
+body {
+  text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
