--- a/css/knotStyle.css
+++ b/css/knotStyle.css
@@ -5,6 +5,11 @@ h1{
   color: #ffea00;
 
 }
+
+body{
+  text-align: center;
+}
+
 @media only screen and (max-width: 600px) {
   body {
     background-color: lightblue;
