--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -9,8 +9,11 @@ h1{
 body {
   padding-left: 200px;
   padding-right: 200px;
-  padding-top: 150px;
   text-align: center;
+}
+
+p1{
+  padding-top: 150px;
 }
 
   body {
