--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -6,6 +6,13 @@ h1{
 
 }
 
+.border{
+  background-color: #9CB380;
+  width: 150px;
+  border: 15px #9CB380;
+  padding:50px;
+  margin:20px;
+}
 body {
   padding-left: 200px;
   padding-right: 200px;
