--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -9,6 +9,7 @@ h1{
 .border{
   background-color: #9CB380;
   width: 800px;
+  height: 1000px;
   border: 15px #9CB380;
   padding:50px;
   margin:20px;
