padding added to top of header

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -19,6 +19,7 @@ body {
   }
 h1{
   padding-bottom: 50px;
+  padding-top: 25px;
 }
 html{
   background-color: #9CB380;
@@ -77,6 +78,7 @@ body{
 }
 h1{
   padding-bottom: 50px;
+  padding-top: 25px;
 }
 
 .Indexnavigation{
