--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -38,6 +38,7 @@ body{
   width:500px;
   float:left;
   color:#00A9D8;
+  color:white;
   text-align: center;
   padding-left: 18px;
   text-decoration: none;
