--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -13,7 +13,7 @@ body {
 
 
 html{
-  background-color: white;
+  background-color: #9CB380;
 }
 
 .Jewelrynavigation{
@@ -42,7 +42,7 @@ html{
 
 @media only screen and (min-width: 768px) {
 html{
-  background-color: white;
+background-color: #9CB380;
 }
 
 .Jewelrynavigation{
