border width and height test

--- a/css/jewelryStyle.css
+++ b/css/jewelryStyle.css
@@ -95,6 +95,8 @@ div.images img{
   width:100%;
   border:solid;
   border-color: #FFFF66;
+  border-height:500px;
+  border-width: 500px;
 }
 
 div.desc{
