--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,12 @@ div.desc {
 }
 
 
+.loginheader{
+    font-family: 'Baskervville', serif, sans-serif;
+    text-align: center;
+    font-size: 2em;
+}
+
 @media only screen and (max-width: 600px) {
   body {
     background-color:white;
